<resources>
    <!--=================================== Hebrew Strings ==========================================-->

    <!-- Strings related to Name os Activities -->
    <string name="activity_home">סריקה שמיעתית</string>
    <string name="app_textSplash"> תלמד לתקשר איתי </string>
    <string name="nameActivity_area_personal"> מטופלים </string>
    <string name="nameActivity_edit_pattient"> עריכה </string>
    <string name="nameActivity_display_pattient"> תצוגה </string>

    <!-- Strings related to the First Screen -->
    <string name="app_textLoginUser">שם משתמש</string>
    <string name="app_textLoginPass">סיסמה</string>
    <string name="app_textPassForgot">שכחתי סיסמה</string>
    <string name="app_textNotAccount">ליצור חשבון</string>
    <string name="app_textButtonExplication" translatable="false">ידע אותנו</string>
    <string name="app_textButtonSignUp">הירשם</string>
    <string name="app_textButtonLogin">התחבר</string>
    <string name="tittle_help_main">הדרכה</string>
    <string name="error_user_pass">לא קיימים משתמשים במסד הנתונים, נא להירשם</string>
    <string name="error_user_not_exists">שם משתמש זה אינו קיים במערכת</string>
    <string name="error_therapist_not_exists">משתמש זה אינו קיים במערכת</string>
    <string name="error_pass">סיסמה שגויה, נא להזין סיסמה תקינה</string>
    <string name="text_help_main">במסך זה המטפל יוכל להתחבר למערכת ע"י הקשת מס' תעודת הזהות/דרכון שלו והסיסמה שלו, במידה והוא משתמש חדש יוכל הוא לעבור למסך הרישום.</string>
    <string name="therapist_id">מספר ת.ז/דרכון</string>
    <string name="therapist_username">שם משתמש</string>
    <string name="therapist_your_password_is">הסיסמה שלך הינה:</string>
    <string name="therapist_your_password">הסיסמה שלך</string>
    <string name="therapist_ok">אישור</string>
    <string name="check_box_rememberMe">זכור אותי</string>
    <string name="invalid_input">נא להזין פרטים נכונים</string>


    <!-- Strings related to SignUp -->
    <string name="title_activity_sign_up">הרשמה</string>
    <string name="prompt_email">שם משתמש</string>
    <string name="prompt_password">סיסמה</string>
    <string name="prompt_id">מספר ת.ז/דרכון</string>
    <string name="prompt_name">שם פרטי</string>
    <string name="action_sign_in">הירשם</string>
    <string name="action_sign_in_short">הירשם</string>
    <string name="error_invalid_email">נא להכניס שם משתמש</string>
    <string name="error_invalid_password">הסיסמה קצרה מידי</string>
    <string name="error_incorrect_password">הסיסמה אינה נכונה</string>
    <string name="error_field_required">שדה זה הינו שדה חובה</string>
    <string name="error_field_required_id">נא להזין 9 ספרות</string>
    <string name="sign_up_successful">רישום בוצעה בהצלחה!</string>
    <string name="sign_in_check">בבקשה תנסה להכנס לחשבונך</string>
    <string name="sign_up_error">בעיה ברישום, תנסה שוב בבקשה</string>
    <string name="id_error_no_int">טעות בהזנת מספר ת.ז. דרכון</string>
    <string name="error_field_pass_user">יש להאזין שם וסיסמה</string>
    <string name="tittle_button_next">המשך</string>
    <string name="tittle_button_add">הוסף</string>
    <string name="error_user_exist">שם משתמש כבר קיים במערכת, נא להזין שם משתמש אחר</string>
    <string name="permission_rationale">"הרשאות אנשי קשר נדרשות לקבלת אימייל."</string>

    <!-- Strings related to Areal Personal -->
    <string name="tittle_patients">בחר מטופל</string>
    <string name="tittle_select">בחר מצב</string>
    <string name="add_patient">הוסף</string>
    <string name="butt_share">שתף</string>
    <string name="butt_next" translatable="false" >המשך</string>
    <string name="newPtnt_tittle">מטופל חדש</string>
    <string name="newPtnt_name">שם</string>
    <string name="newPtnt_id">תז/דרכון</string>
    <string name="newPtnt_text">הוספת מטופל</string>
    <string name="newPtnt_cancel">בטל</string>
    <string name="newPtnt_ok">הוסף</string>
    <string name="tittle_remove_pat">מחק</string>
    <string name="delete_pt_tittle">מחיקת מטופל</string>
    <string name="delete_pt_quetion">האם אתה בטוח?</string>
    <string name="delete_pt_item">מחיקה בוצעה בהצלחה</string>
    <string name="error_delete_pt_item">מחיקה לא הצליחה</string>
    <string name="error_fields_required_alert">כל השדות הינם שדות חובה</string>

    <!-- Strings related to Display List Patient -->
    <string name="button_yes">הקלט כן</string>
    <string name="button_no">הקלט לא</string>
    <string name="button_watch_record">צפה בהקלטה</string>
    <string name="tittle_options">אפשרויות</string>
    <string name="option_edit">ערוך מטופל</string>
    <string name="option_personal_area">האיזור האישי שלי</string>
    <string name="option_voice_recognize_active">הפעל זיהוי קולי</string>
    <string name="option_voice_recognize_inactive">כבה זיהוי קולי</string>
    <string name="option_sort_list_by_statistic_active">סטטיסטקה-הפעל סידור רשימות</string>
    <string name="option_sort_list_by_statistic_inactive">סטטיסטיקה-כבה סידור רשימות</string>
    <string name="option_log_out">יציאה</string>
    <string name="title_activity_display_patient">הצגת מטופל</string>
    <string name="voice_start">זיהוי קולי הופעל</string>
    <string name="voice_stop">זיהוי קולי הופסק</string>
    <string name="statistic_start">סידור רשימות הופעל</string>
    <string name="statistic_stop">סידור רשימות הופסק</string>
    <string name="tittle_ramas">מה המיקום שלי?</string>

    <!-- Strings related to Edit List Patient -->
    <string name="delete_record_msg">ההקלטה נמחקה בהצלחה!</string>
    <string name="delete_record">מחק הקלטה</string>
    <string name="text_hint_edit">הוסף פריט</string>
    <string name="insert_item">נא להכניס פריט</string>
    <string name="show_yes_record">הצג "כן"</string>
    <string name="show_no_record">הצג "לא"</string>
    <string name="delete_item_tittle">מחיקת בקשה</string>
    <string name="delete_item_quetion">האם אתה בטוח?</string>
    <string name="delete_the_item">הפריט נמחק</string>
    <string name="delete_button">למחוק</string>
    <string name="edit_button">לערוך</string>
    <string name="edit_tittle">עריכת הבקשה</string>
    <string name="edit_message">נא להזין בקשה מחודשת</string>
    <string name="edit_successfully">עריכה בוצע בהצלחה</string>
    <string name="edit_not_successfully">העריכה לא הצליחה </string>
    <string name="edit_tittle_buttons">עריכה או מחיקת בקשה</string>
    <string name="edit_enter_request">הכנס שם הבקשה</string>
    <string name="edit_exit_option">יציאה</string>
    <string name="same_request">הבקשה כבר קיימת במערכת, נא להזין בקשה שונה</string>
    <string name="text_press_item">בקשה</string>
    <string name="error_record_not_found_head">שגיאה בבסיס הנתונים</string>
    <string name="error_record_not_found_body">שגיאה ,הרשומה לא נמצאה בבסיס הנתונים</string>
    <string name="delete_video_tittle">מחיקת סרטון</string>
    <string name="button_go_display">לעבור למסך התצוגה</string>
    <string name="progress_dialog_msg">מעבד וידאו. אנא המתן...</string>
    <string name="error_video_file_not_found_head">שגיאה! קובץ הוידאו לא נמצא במכשיר.</string>
    <string name="error_video_file_not_found_body">קובץ הוידאו לא נמצא במכשיר, כנראה שנמחק או אבד. \n נתוני ההקלטה יוסרו מהמערכת ,אנא הקלט מטופל בשנית.</string>
    <string name="alert_record_video">חשוב: נא לוודא שהמצלמה שומרת את הקבצים בזיכרון הפנימי של המכשיר</string>

    <!-- Strings related to Demo Screen -->
    <string name="button_get_yes" translatable="false" >כן</string>
    <string name="button_get_no" translatable="false" >לא</string>

    <!-- Strings related to Algorithm Level Screen -->
    <string name="level_1">רמה 1</string>
    <string name="level_2">רמה 2</string>
    <string name="level_3">רמה 3</string>
    <string name="level_4">רמה 4</string>
    <string name="your_position_header">המיקום שלך</string>

    <!--helps -->
    <string name="help_main_activity">במסך זה המטפל יוכל להתחבר למערכת ע\"י הקשת מס\' תעודת הזהות/דרכון והסיסמה שלו, במידה והוא משתמש חדש יוכל הוא לעבור למסך הרישום, במידה ושכח את הסיסמא ניתן לשחזר אותה.</string>
    <string name="help_sign_up_activity">במסך זה יש לרשום משתמש חדש, חשוב לזכור את שם המשתמש והסיסמא לצורך כניסה לחשבון בעתיד.</string>
    <string name="help_personal_area_activity">במסך זה ניתן להוסיף מטופל חדש/למחוק מטופל קיים/לבחור מטופל בתיבה המשולבת ואז לעבור למסך הנדרש (מסך עריכה - מטופל חדש, מסך תצוגה - מטופל קיים).</string>
    <string name="help_edit_patient_activity">במסך זה ניתן: להקליט/לצפות/למחוק את הוידאו של פקודת ה-\'כן\' של המטופל ,כמו כן ניתן להוסיף ולערוך/למחוק ע"י לחיצה 'ממושכת' בקשות של המטופל, וכן קיימת האופציה להוספת בקשות עד ל-4 רמות פנימיות.
חשוב: נא לוודא שהמצלמה שומרת את הקבצים בזיכרון הפנימי של המכשיר</string>
    <string name="help_display_patient_activity">במסך זה ניתן לעיין בתפריט האודיטורי באופן ידני או לעבור למצב זיהוי קולי באופן המאפשר דפדוף אוטומטי והאזנה לפקודת ה-\'כן\' של המטופל, ניתן גם לעבור למצב \'עריכה\' או \'איזור האישי\' ולסדר את הרשימות באופן סטטיסטי ולקבל מבט מלמעלה באיזה מקום נמצא בתפריט הרשימה.</string>
    <string name="help_algorithm_level_activity">במסך זה המטפל והמטופל יוכלו לדעת באיזה שלב היררכי הם נמצאים בתפריטי הרשימות האודיטוריות.</string>

    <!-- Strings related to Slide Menu -->
    <string-array name="tittles">
        <item>עריכה</item>
        <item>זיהוי קולי</item>
        <item>בחר מטופל</item>
    </string-array>

    <string-array name="items">
        <item>@mipmap/ic_share</item>
        <item>"@mipmap/ic_share"</item>
        <item>"@mipmap/ic_share"</item>
    </string-array>
    <string name="title_activity_display_rama1" translatable="false" >Display_rama1</string>

    <string name="navigation_drawer_open" translatable="false" >Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false" >Close navigation drawer</string>

    <string name="action_settings" translatable="false" >Settings</string>
</resources>
