<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <pl.polidea.view.ZoomView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="25dp"
        android:weightSum="1">


        <ImageView
            android:id="@+id/button9"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:paddingTop="-10dp"
            android:text="help"
            app:srcCompat="@mipmap/ic_help3" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="596dp"
            android:layout_height="165dp"
            android:layout_gravity="center"
            android:layout_marginTop="-25dp"
            android:layout_weight="0.32"
            app:srcCompat="@mipmap/logo" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView12"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/app_textLoginUser"
            android:textDirection="ltr"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_login_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/dateView"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="45dp"
            android:background="@drawable/edit_text_style"
            android:ellipsize="start"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:selectAllOnFocus="false"
            android:textSize="21.3sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView12"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:text="@string/app_textLoginPass"
            android:textDirection="ltr"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_login_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/dateView"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="45dp"
            android:background="@drawable/edit_text_style"
            android:ellipsize="start"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:textSize="21.3sp" />

        <Button
            android:id="@+id/button_login"
            style="?android:textAppearanceSmall"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_style"
            android:gravity="center"
            android:onClick="press_signIn"
            android:text="@string/app_textButtonLogin"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/button_signUp"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="-26dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:onClick="press_signUp"
            android:text="@string/app_textButtonSignUp"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_forget_pass"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:text="@string/app_textPassForgot"
            android:layout_marginTop="2dp"
            android:paddingBottom="5dp"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
    </pl.polidea.view.ZoomView>
</ScrollView>