<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <pl.polidea.view.ZoomView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000000">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="512dp"
                android:background="#9BDDFF">

                <ImageView
                    android:id="@+id/imageView6"
                    android:onClick="help_algorithm_level_activity"
                    android:layout_width="32dp"
                    android:layout_height="40dp"
                    android:layout_gravity="right"
                    android:paddingTop="-10dp"
                    android:text="help"
                    app:srcCompat="@mipmap/ic_help3"
                    android:layout_alignParentEnd="true" />
                <Button
                    android:id="@+id/btn_level_1"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:textColor="#006B3C"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="61dp"
                    android:background="@drawable/level_button_white"
                    android:gravity="center"
                    android:text="@string/level_1"
                    android:textAllCaps="false"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_level_2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:textColor="#006B3C"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="173dp"
                    android:background="@drawable/level_button_white"
                    android:gravity="center"
                    android:text="@string/level_2"
                    android:textAllCaps="false"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_level_3"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:textColor="#006B3C"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="285dp"
                    android:background="@drawable/level_button_white"
                    android:gravity="center"
                    android:text="@string/level_3"
                    android:textAllCaps="false"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_level_4"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:textColor="#006B3C"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="396dp"
                    android:background="@drawable/level_button_white"
                    android:gravity="center"
                    android:text="@string/level_4"
                    android:textAllCaps="false"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/header"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:text="@string/your_position_header"
                    android:textAlignment="center"
                    android:textColor="#007BA7"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="68dp"
                    app:srcCompat="@mipmap/ic_arrow"
                    android:layout_alignTop="@+id/btn_level_1"
                    android:layout_alignStart="@+id/imageView5" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/imageView4"
                    android:layout_below="@+id/imageView"
                    android:layout_marginTop="66dp"
                    app:srcCompat="@mipmap/ic_arrow" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView5"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="62dp"
                    app:srcCompat="@mipmap/ic_arrow" />

            </RelativeLayout>
        </LinearLayout>
    </pl.polidea.view.ZoomView>
</ScrollView>