<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <pl.polidea.view.ZoomView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/activity_edit_patient"
                android:layout_width="match_parent"
                android:layout_height="506dp"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.graos.auditory_scanning_final_project.EditPatient">


                <TextView
                    android:id="@+id/textViewHiPatient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:paddingTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:textAllCaps="false"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/listItems"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="18dp"
                    android:layout_marginRight="18dp"
                    android:layout_marginTop="30dp"
                    android:onClick="press_addItem"
                    app:srcCompat="@mipmap/ic_add" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewHiPatient"
                    android:gravity="center"
                    android:layout_gravity = "center"
                    android:layout_toLeftOf="@+id/imageView2"
                    android:layout_toStartOf="@+id/imageView2"
                    android:ems="10"
                    android:hint="@string/text_hint_edit"
                    android:inputType="textPersonName" />

                <ListView
                    android:id="@+id/listItems"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/editText"
                    android:layout_marginTop="26dp"
                    android:layout_above="@+id/button4" />

                <Button
                    android:id="@+id/button4"
                    android:onClick="onClick_record_yes"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/button_style"
                    android:text="@string/button_yes"
                    android:textAllCaps="false"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_style"
                    android:text="@string/button_no"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/VideoContainer"
                    android:visibility="invisible"
                    android:layout_alignParentBottom="true">

                    <VideoView
                        android:id="@+id/PatientVideoView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </pl.polidea.view.ZoomView>
</ScrollView>
